Correct layout issues when single node
https://www.pivotaltracker.com/story/show/173475855

--- a/packages/marko-web/scss/node-list.scss
+++ b/packages/marko-web/scss/node-list.scss
@@ -116,6 +116,7 @@ $marko-web-node-list-border-color:    rgba(0, 0, 0, .125) !default;
       &__node {
         display: flex;
         flex-grow: 1;
+        align-items: flex-start;
       }
     }
   }
